deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels:
        app: gitops-app
    spec:
      containers:
        - name: app
          image: fawaswebcastle/gitops-app:1776283234
          ports:
            - containerPort: 3000
