deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-service
spec:
  type: ClusterIP
  selector:
    app: gitops-app
  ports:
    - port: 80
      targetPort: 3000
