deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-app-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: gitops.fawasam.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-service
                port:
                  number: 80
